done with sidebar stlying and designing the html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                     <p>Admin</p>
                 </div>
             </div>
+            <ul class="links">
+                <li><a href="#"><i class="fa-solid fa-chart-column" style="color: #ffffff;"></i>Dashboard</a></li>
+                <li><a href="#"><i class="fa-solid fa-rectangle-ad" style="color: #ffffff;"></i>Compaign</a><i
+                        class="fa-solid fa-caret-down campdrop" style="color: #ffffff;"></i></li>
+                <li><a href="#"><i class="fa-solid fa-credit-card" style="color: #ffffff;"></i>Payment Method</a></li>
+                <li><a href="#"><i class="fa-solid fa-money-bill-transfer" style="color: #ffffff;"></i>Withdrawal
+                        Request</a></li>
+                <li><a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i>User</a><i
+                        class="fa-solid fa-caret-down userdrop" style="color: #ffffff;"></i></li>
+                <li><a href="#"><i class="fa-solid fa-circle-question" style="color: #ffffff;"></i>FAQ</a></li>
+                <li><a href="#"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
+            </ul>
         </div>
         <!-- THIS IS THE SEARCHBAR OR HEADER DIV -->
         <div class="searchbar">
