--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 </div>
                 <div class="extralarge">
                     <div class="box-xlarge"></div>
-                    <div class="box-large"></div>
+                    <div class="box-large">
+                    </div>
                 </div>
             </div>
 
