added so many changes such as modifying my chartjs, html and css files

--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
             <div class="chartbox">
                 <div class="col">
                     <div class="box">
-                        <!-- <span>Today Visitor</span>
-                        <div class="subcharts">567096 <i class="fa-solid fa-arrow-down-long"></i>0.68%</div> -->
-                        <canvas id="myChart" style="width: 5%; height: 5%;"></canvas>
                     </div>
                     <div class="box">
                         <!-- <span>Today's Collection</span> $ 90875.00 <i class="fa-solid fa-arrow-up"></i>
                         0.5.8%-->
-                        <canvas id="box2"></canvas>
                         </div>
                     <div class="box">
-                        <canvas id="myChart"></canvas>
+                        <canvas id="chart1" style="width: 5%; height: 5%;"></canvas>
                     </div>
                 </div>
                 <div class="col">
                     <div class="box"></div>
                     <div class="box"></div>
-                    <div class="box"></div>
+                    <div class="box">
+                        <canvas id="chart2" style="width: 5%; height: 5%;"></canvas>
+                    </div>
                 </div>
                 <div class="extralarge">
                     <div class="box-xlarge">
+                        <canvas id="box_larger"></canvas>
                     </div>
                     <div class="box-large">
+                        <canvas id="box_large"></canvas>
                     </div>
                 </div>
             </div>
