--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/b55a4a1c1f.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>Document</title>
 </head>
 
@@ -28,6 +29,7 @@
                 <p>Admin</p>
             </div>
         </div>
+        <!-- SIDE BAR LINKS -->
         <ul class="links">
             <li><a href="#"><i class="fa-solid fa-chart-column" style="color: #ffffff;"></i>Dashboard</a></li>
             <li><a href="#"><i class="fa-solid fa-rectangle-ad" style="color: #ffffff;"></i>Compaign</a><i
@@ -41,7 +43,9 @@
             <li><a href="#"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
     </div>
     </ul>
+    <!-- MAIN SECTION -->
     <div class="main">
+        <!-- SEARCH BAR -->
         <div class="searchbar">
             <div class="search">
                 <i class="fa-solid fa-magnifying-glass" style="color:grey"></i>
@@ -52,6 +56,7 @@
                 <span class="badge">2</span>
             </a>
         </div>
+        <!-- CHARTS COLLECTION CONTAINER -->
         <div class="charts">
             <h1>DASHBOARD</h1>
             <div class="chartbox">
@@ -60,7 +65,8 @@
                         <div class="txt">
                             <span>Today's Collection</span>
                             <h1>$ 90,875.00</h1>
-                            <span style="color: red;"><span class="material-icons up arrow" style="color: red;">south</span> 0.58%</span>
+                            <span style="color: red;"><span class="material-icons up arrow"
+                                    style="color: red;">south</span> 0.58%</span>
                         </div>
                         <span class="material-icons icons">collections</span>
                     </div>
@@ -68,7 +74,8 @@
                         <div class="txt">
                             <span>Total Available Balance</span>
                             <h1>$ 102.89K</h1>
-                            <span style="color: green;"><span class="material-icons down arrow" style="color: green;">north</span> 13.8%</span>
+                            <span style="color: green;"><span class="material-icons down arrow"
+                                    style="color: green;">north</span> 13.8%</span>
                         </div>
                         <span class="material-icons icons">account_balance_wallet</span>
                     </div>
@@ -89,7 +96,8 @@
                         <div class="txt">
                             <span>Withdrawal Request</span>
                             <h1>$ 102.89K</h1>
-                            <span style="color: red;"><span class="material-icons down arrow" style="color: red;">south</span> 13.8%</span>
+                            <span style="color: red;"><span class="material-icons down arrow"
+                                    style="color: red;">south</span> 13.8%</span>
                         </div>
                         <span class="material-icons icons">request_quote</span>
                     </div>
@@ -99,11 +107,34 @@
                 </div>
                 <div class="extralarge">
                     <div class="box-xlarge">
-                        <svg onload="drawChart()"></svg>
-                        <!-- <canvas id="box_larger" style="width: 70%; height: 70%;"></canvas> -->
+                        <canvas id="box_larger" style="width: 70%; height: 70%;"></canvas>
                     </div>
                     <div class="box-large">
-                        <canvas id="box_large"></canvas>
+                        <h3>Campaign Request</h3>
+                        <div class="campaign-request">
+                            <img src="/assets/images/profile.jpg" alt="">
+                            <div class="approve-box">
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <button style="background-color: green; color: #ffffff;">Approve</button><button
+                                    style="background-color: red; color: #ffffff;">Reject</button>
+                            </div>
+                        </div>
+                        <div class="campaign-request">
+                            <img src="/assets/images/R.jpg" alt="">
+                            <div class="approve-box">
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <button style="background-color: green; color: #ffffff;">Approve</button><button
+                                    style="background-color: red; color: #ffffff;">Reject</button>
+                            </div>
+                        </div>
+                        <div class="campaign-request">
+                            <img src="/assets/images/profile.jpg" alt="">
+                            <div class="approve-box">
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <button style="background-color: green; color: #ffffff;">Approve</button><button
+                                    style="background-color: red; color: #ffffff;">Reject</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -112,7 +143,6 @@
     </div>
     <script src="js/app.js"></script>
     <script src="js/charts.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </body>
 
 </html>
