--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="extralarge">
                     <div class="box-xlarge">
-                        <canvas id="box_larger" style="width: 70%; height: 70%;"></canvas>
+                        <div id="chart_div" style="width: 100%; height: 38vh;"></div>
                     </div>
                     <div class="box-large">
                         <h3>Campaign Request</h3>
@@ -141,6 +141,9 @@
 
         </div>
     </div>
+    <script type="text/javascript">
+      </script>
+  
     <script src="js/app.js"></script>
     <script src="js/charts.js"></script>
 </body>
