added new media query file 'mediaquery.css' and modified so many things in my files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/sidebar.css">
     <link rel="stylesheet" href="/css/searchbar.css">
     <link rel="stylesheet" href="/css/charts.css">
+    <link rel="stylesheet" href="/css/mediaquery.css">
     <script src="https://kit.fontawesome.com/b55a4a1c1f.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-    <div class="sidebar">
+    <div class="sidebar" id="side">
         <!-- LOGO CONTAINER -->
         <div class="logo">
             <img src="/assets/images/logo.png" alt="humanos">
@@ -62,88 +63,85 @@
             <div class="chartbox">
                 <div class="col">
                     <div class="box bx">
-                        <div class="txt">
+                        <!-- <div class="txt">
                             <span>Today's Collection</span>
                             <h1>$ 90,875.00</h1>
                             <span style="color: red;"><span class="material-icons up arrow"
                                     style="color: red;">south</span> 0.58%</span>
                         </div>
-                        <span class="material-icons icons">collections</span>
+                        <span class="material-icons icons">collections</span> -->
                     </div>
                     <div class="box bx">
-                        <div class="txt">
+                        <!-- <div class="txt">
                             <span>Total Available Balance</span>
                             <h1>$ 102.89K</h1>
                             <span style="color: green;"><span class="material-icons down arrow"
                                     style="color: green;">north</span> 13.8%</span>
                         </div>
-                        <span class="material-icons icons">account_balance_wallet</span>
+                        <span class="material-icons icons">account_balance_wallet</span> -->
                     </div>
                     <div class="box">
-                        <canvas id="chart1" style="width: 5%; height: 5%;"></canvas>
+                        <!-- <canvas id="chart1" style="width: 5%; height: 5%;"></canvas> -->
                     </div>
                 </div>
                 <div class="col">
                     <div class="box bx">
-                        <div class="txt">
+                        <!-- <div class="txt">
                             <span>Pending Request</span>
                             <h1>$ 75k</h1>
                             <span style="color: green;"><span class="material-icons up arrow">north</span>12.4%</span>
                         </div>
-                        <span class="material-icons icons">pending</span>
+                        <span class="material-icons icons">pending</span> -->
                     </div>
                     <div class="box bx">
-                        <div class="txt">
+                        <!-- <div class="txt">
                             <span>Withdrawal Request</span>
                             <h1>$ 102.89K</h1>
                             <span style="color: red;"><span class="material-icons down arrow"
                                     style="color: red;">south</span> 13.8%</span>
                         </div>
-                        <span class="material-icons icons">request_quote</span>
+                        <span class="material-icons icons">request_quote</span> -->
                     </div>
                     <div class="box">
-                        <canvas id="chart2" style="width: 5%; height: 5%;"></canvas>
+                        <!-- <canvas id="chart2" style="width: 5%; height: 5%;"></canvas> -->
                     </div>
                 </div>
                 <div class="extralarge">
                     <div class="box-xlarge">
-                        <div id="chart_div" style="width: 100%; height: 38vh;"></div>
+                        <!-- <div id="chart_div" style="width: 100%; height: 38vh;"></div> -->
                     </div>
                     <div class="box-large">
                         <h3>Campaign Request</h3>
-                        <div class="campaign-request">
+                        <!-- <div class="campaign-request">
                             <img src="/assets/images/profile.jpg" alt="">
                             <div class="approve-box">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                                 <button style="background-color: green; color: #ffffff;">Approve</button><button
                                     style="background-color: red; color: #ffffff;">Reject</button>
                             </div>
-                        </div>
-                        <div class="campaign-request">
+                        </div> -->
+                        <!-- <div class="campaign-request">
                             <img src="/assets/images/R.jpg" alt="">
                             <div class="approve-box">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                                 <button style="background-color: green; color: #ffffff;">Approve</button><button
                                     style="background-color: red; color: #ffffff;">Reject</button>
                             </div>
-                        </div>
-                        <div class="campaign-request">
+                        </div> -->
+                        <!-- <div class="campaign-request">
                             <img src="/assets/images/profile.jpg" alt="">
                             <div class="approve-box">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                                 <button style="background-color: green; color: #ffffff;">Approve</button><button
                                     style="background-color: red; color: #ffffff;">Reject</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
 
         </div>
     </div>
-    <script type="text/javascript">
-      </script>
-  
     <script src="js/app.js"></script>
     <script src="js/charts.js"></script>
 </body>
