added responsiveness to the sidebar, also added toggle button, to toggle in and out the side bar

--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
         <!-- LOGO CONTAINER -->
         <div class="logo">
             <img src="/assets/images/logo.png" alt="humanos">
-            <span>Humanos</span>
+            <span class="brandname">Humanos</span>
         </div>
         <!-- PROFILE CONTAINER -->
         <div class="profile">
             <img src="/assets/images/profile.jpg" alt="profile">
             <div class="profile-description">
-                <span><span>John Doe</span><i class="fa-solid fa-caret-down" style="color: #ffffff;"></i></span>
-                <p>Admin</p>
+                <span class="desc"><span>John Doe</span><i class="fa-solid fa-caret-down" style="color: #ffffff;"></i></span>
+                <p class="desc">Admin</p>
             </div>
         </div>
         <!-- SIDE BAR LINKS -->
         <ul class="links">
-            <li><a href="#"><i class="fa-solid fa-chart-column" style="color: #ffffff;"></i>Dashboard</a></li>
-            <li><a href="#"><i class="fa-solid fa-rectangle-ad" style="color: #ffffff;"></i>Compaign</a><i
-                    class="fa-solid fa-caret-down campdrop" style="color: #ffffff;"></i></li>
-            <li><a href="#"><i class="fa-solid fa-credit-card" style="color: #ffffff;"></i>Payment Method</a></li>
-            <li><a href="#"><i class="fa-solid fa-money-bill-transfer" style="color: #ffffff;"></i>Withdrawal
-                    Request</a></li>
-            <li><a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i>User</a><i
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-chart-column" style="color: #ffffff;"></i>Dashboard</a></li>
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-rectangle-ad" style="color: #ffffff;"></i>Compaign</a><i
                     class="fa-solid fa-caret-down userdrop" style="color: #ffffff;"></i></li>
-            <li><a href="#"><i class="fa-solid fa-circle-question" style="color: #ffffff;"></i>FAQ</a></li>
-            <li><a href="#"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-credit-card" style="color: #ffffff;"></i>Payment Method</a></li>
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-money-bill-transfer" style="color: #ffffff;"></i>Withdrawal
+                    Request</a></li>
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-user" style="color: #ffffff;"></i>User</a><i
+                    class="fa-solid fa-caret-down userdrop" style="color: #ffffff;"></i></li>
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-circle-question" style="color: #ffffff;"></i>FAQ</a></li>
+            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
     </div>
     </ul>
     <!-- MAIN SECTION -->
@@ -60,6 +60,8 @@
         <!-- CHARTS COLLECTION CONTAINER -->
         <div class="charts">
             <h1>DASHBOARD</h1>
+            <li class="menu"><i class="fa-sharp fa-solid fa-circle-chevron-down"></i></li>
+            <!-- <li class="menu"><i class="fa-sharp fa-solid fa-circle-chevron-down"></i></li> -->
             <div class="chartbox">
                 <div class="col">
                     <div class="box bx">
