uncommnented the first chart box

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <div class="chartbox">
                 <div class="col">
                     <div class="box bx">
-                        <!-- <div class="txt">
+                        <div class="txt">
                             <span>Today's Collection</span>
                             <h1>$ 90,875.00</h1>
                             <span style="color: red;"><span class="material-icons up arrow"
                                     style="color: red;">south</span> 0.58%</span>
                         </div>
-                        <span class="material-icons icons">collections</span> -->
+                        <span class="material-icons icons">collections</span>
                     </div>
                     <div class="box bx">
                         <!-- <div class="txt">
