added all the chart box back except the two large boxes

--- a/index.html
+++ b/index.html
@@ -74,43 +74,43 @@
                         <span class="material-icons icons">collections</span>
                     </div>
                     <div class="box bx">
-                        <!-- <div class="txt">
+                        <div class="txt">
                             <span>Total Available Balance</span>
                             <h1>$ 102.89K</h1>
                             <span style="color: green;"><span class="material-icons down arrow"
                                     style="color: green;">north</span> 13.8%</span>
                         </div>
-                        <span class="material-icons icons">account_balance_wallet</span> -->
+                        <span class="material-icons icons">account_balance_wallet</span>
                     </div>
                     <div class="box">
-                        <!-- <canvas id="chart1" style="width: 5%; height: 5%;"></canvas> -->
+                        <canvas id="chart1" style="width: 5%; height: 5%;"></canvas>
                     </div>
                 </div>
                 <div class="col">
                     <div class="box bx">
-                        <!-- <div class="txt">
+                        <div class="txt">
                             <span>Pending Request</span>
                             <h1>$ 75k</h1>
                             <span style="color: green;"><span class="material-icons up arrow">north</span>12.4%</span>
                         </div>
-                        <span class="material-icons icons">pending</span> -->
+                        <span class="material-icons icons">pending</span>
                     </div>
                     <div class="box bx">
-                        <!-- <div class="txt">
+                        <div class="txt">
                             <span>Withdrawal Request</span>
                             <h1>$ 102.89K</h1>
                             <span style="color: red;"><span class="material-icons down arrow"
                                     style="color: red;">south</span> 13.8%</span>
                         </div>
-                        <span class="material-icons icons">request_quote</span> -->
+                        <span class="material-icons icons">request_quote</span>
                     </div>
                     <div class="box">
-                        <!-- <canvas id="chart2" style="width: 5%; height: 5%;"></canvas> -->
+                        <canvas id="chart2" style="width: 5%; height: 5%;"></canvas>
                     </div>
                 </div>
                 <div class="extralarge">
                     <div class="box-xlarge">
-                        <!-- <div id="chart_div" style="width: 100%; height: 38vh;"></div> -->
+                        <div id="chart_div" style="width: 100%; height: 38vh;"></div>
                     </div>
                     <div class="box-large">
                         <h3>Campaign Request</h3>
