--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -26,22 +28,29 @@
         <div class="profile">
             <img src="/assets/images/profile.jpg" alt="profile">
             <div class="profile-description">
-                <span class="desc"><span>John Doe</span><i class="fa-solid fa-caret-down" style="color: #ffffff;"></i></span>
+                <span class="desc"><span>John Doe</span><i class="fa-solid fa-caret-down"
+                        style="color: #ffffff;"></i></span>
                 <p class="desc">Admin</p>
             </div>
         </div>
         <!-- SIDE BAR LINKS -->
         <ul class="links">
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-chart-column" style="color: #ffffff;"></i>Dashboard</a></li>
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-rectangle-ad" style="color: #ffffff;"></i>Compaign</a><i
-                    class="fa-solid fa-caret-down userdrop" style="color: #ffffff;"></i></li>
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-credit-card" style="color: #ffffff;"></i>Payment Method</a></li>
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-money-bill-transfer" style="color: #ffffff;"></i>Withdrawal
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-chart-column"
+                        style="color: #ffffff;"></i>Dashboard</a></li>
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-rectangle-ad"
+                        style="color: #ffffff;"></i>Compaign</a><i class="fa-solid fa-caret-down userdrop"
+                    style="color: #ffffff;"></i></li>
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-credit-card" style="color: #ffffff;"></i>Payment
+                    Method</a></li>
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-money-bill-transfer"
+                        style="color: #ffffff;"></i>Withdrawal
                     Request</a></li>
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-user" style="color: #ffffff;"></i>User</a><i
-                    class="fa-solid fa-caret-down userdrop" style="color: #ffffff;"></i></li>
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-circle-question" style="color: #ffffff;"></i>FAQ</a></li>
-            <li ><a href="#" class="sidebarlink"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-user" style="color: #ffffff;"></i>User</a><i
+                    class="fa-solid fa-caret-down userdrop campdrop" style="color: #ffffff;"></i></li>
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-circle-question"
+                        style="color: #ffffff;"></i>FAQ</a></li>
+            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a>
+            </li>
     </div>
     </ul>
     <!-- MAIN SECTION -->
@@ -57,14 +66,14 @@
                 <span class="badge">2</span>
             </a>
         </div>
+        <h1>DASHBOARD</h1>
         <!-- CHARTS COLLECTION CONTAINER -->
         <div class="charts">
-            <h1>DASHBOARD</h1>
             <li class="menu"><i class="fa-sharp fa-solid fa-circle-chevron-down"></i></li>
             <!-- <li class="menu"><i class="fa-sharp fa-solid fa-circle-chevron-down"></i></li> -->
             <div class="chartbox">
-                <div class="col">
-                    <div class="box bx">
+                <div class="col col-1">
+                    <div class="box bx box-1">
                         <div class="txt">
                             <span>Today's Collection</span>
                             <h1>$ 90,875.00</h1>
@@ -73,7 +82,7 @@
                         </div>
                         <span class="material-icons icons">collections</span>
                     </div>
-                    <div class="box bx">
+                    <div class="box bx box-2">
                         <div class="txt">
                             <span>Total Available Balance</span>
                             <h1>$ 102.89K</h1>
@@ -82,12 +91,12 @@
                         </div>
                         <span class="material-icons icons">account_balance_wallet</span>
                     </div>
-                    <div class="box">
+                    <div class="box box-3">
                         <canvas id="chart1" style="width: 5%; height: 5%;"></canvas>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="box bx">
+                <div class="col col-2">
+                    <div class="box bx box-4">
                         <div class="txt">
                             <span>Pending Request</span>
                             <h1>$ 75k</h1>
@@ -95,7 +104,7 @@
                         </div>
                         <span class="material-icons icons">pending</span>
                     </div>
-                    <div class="box bx">
+                    <div class="box bx box-5">
                         <div class="txt">
                             <span>Withdrawal Request</span>
                             <h1>$ 102.89K</h1>
@@ -114,30 +123,30 @@
                     </div>
                     <div class="box-large">
                         <h3>Campaign Request</h3>
-                        <!-- <div class="campaign-request">
+                        <div class="campaign-request">
                             <img src="/assets/images/profile.jpg" alt="">
                             <div class="approve-box">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                                 <button style="background-color: green; color: #ffffff;">Approve</button><button
                                     style="background-color: red; color: #ffffff;">Reject</button>
                             </div>
-                        </div> -->
-                        <!-- <div class="campaign-request">
+                        </div> 
+                         <div class="campaign-request">
                             <img src="/assets/images/R.jpg" alt="">
                             <div class="approve-box">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                                 <button style="background-color: green; color: #ffffff;">Approve</button><button
                                     style="background-color: red; color: #ffffff;">Reject</button>
                             </div>
-                        </div> -->
-                        <!-- <div class="campaign-request">
+                        </div> 
+                         <div class="campaign-request">
                             <img src="/assets/images/profile.jpg" alt="">
                             <div class="approve-box">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                                 <button style="background-color: green; color: #ffffff;">Approve</button><button
                                     style="background-color: red; color: #ffffff;">Reject</button>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
