--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
             <li><a href="#" class="sidebarlink"><i class="fa-solid fa-chart-column"
                         style="color: #ffffff;"></i>Dashboard</a></li>
             <li><a href="#" class="sidebarlink"><i class="fa-solid fa-rectangle-ad"
-                        style="color: #ffffff;"></i>Compaign</a><i class="fa-solid fa-caret-down userdrop"
-                    style="color: #ffffff;"></i></li>
+                        style="color: #ffffff;"></i>Compaign</a></li>
             <li><a href="#" class="sidebarlink"><i class="fa-solid fa-credit-card" style="color: #ffffff;"></i>Payment
                     Method</a></li>
             <li><a href="#" class="sidebarlink"><i class="fa-solid fa-money-bill-transfer"
                         style="color: #ffffff;"></i>Withdrawal
                     Request</a></li>
-            <li><a href="#" class="sidebarlink"><i class="fa-solid fa-user" style="color: #ffffff;"></i>User</a><i
-                    class="fa-solid fa-caret-down userdrop campdrop" style="color: #ffffff;"></i></li>
+            <li><a href="#" class="sidebarlink"></li>
             <li><a href="#" class="sidebarlink"><i class="fa-solid fa-circle-question"
                         style="color: #ffffff;"></i>FAQ</a></li>
             <li><a href="#" class="sidebarlink"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a>
